[gd_scene load_steps=8 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://start_map.gd" type="Script" id=3]
[ext_resource path="res://Camera2D.gd" type="Script" id=4]
[ext_resource path="res://VectorMap.gd" type="Script" id=7]
[ext_resource path="res://assets/buttons/ocean_active.png" type="Texture" id=8]
[ext_resource path="res://ui/hud/toolbar/toolbar.tscn" type="PackedScene" id=37]
[ext_resource path="res://AI/Agent.gd" type="Script" id=39]

[node name="CityMap" type="Node2D"]
position = Vector2( -2, 3 )
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
rotating = true
current = true
limit_smoothed = true
smoothing_enabled = true
script = ExtResource( 4 )

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 1 )

[node name="StatusBar" type="MarginContainer" parent="HUD"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.331055
margin_top = -134.132
margin_right = -0.331055
margin_bottom = -100.132
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TileDisplay" type="Label" parent="HUD/StatusBar"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1270.0
margin_bottom = 24.0
text = "Tile: (0, 0)"

[node name="OceanHeight" type="Label" parent="HUD/StatusBar"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1270.0
margin_bottom = 24.0
text = "Ocean Level: "
align = 1

[node name="MousePosition" type="Label" parent="HUD/StatusBar"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1270.0
margin_bottom = 24.0
text = "Mouse: "
align = 2

[node name="Toolbar" parent="HUD" instance=ExtResource( 37 )]

[node name="Agent" type="Node" parent="."]
script = ExtResource( 39 )

[node name="Resident" type="Node" parent="Agent"]
script = ExtResource( 8 )

[node name="VectorMap" type="YSort" parent="."]
script = ExtResource( 7 )
